added third adress option

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
         <input type="text" id="address-1" name="address-1" class="autocomplete-address"><br><br>
         <label for="address-2">Address 2:</label>
         <input type="text" id="address-2" name="address-2" class="autocomplete-address"><br><br>
-        <!-- Add more address fields as needed -->
+        <label for="address-3">Address 3:</label>
+        <input type="text" id="address-3" name="address-3" class="autocomplete-address"><br><br>
         <button type="submit">Calculate Route</button>
     </form>
     <div id="result"></div>
